trunk/Archive2/c6/39bae570ea815f/output
main.cpp:23:12: error: invalid operands to binary expression ('_' and 'std::string' (aka 'basic_string<char>'))
    if(_{} >> a >> b)
       ~~~ ^  ~
main.cpp:13:15: note: candidate function not viable: expects an l-value for 1st argument
    friend _ &operator>>(_ &s, std::string &v)
              ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/streambuf:168:9: note: candidate template ignored: could not match 'basic_istream<type-parameter-0-0, type-parameter-0-1>' against '_'
        operator>>(basic_istream<_CharT2, _Traits2>&,
        ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:727:5: note: candidate template ignored: could not match 'basic_istream<char, type-parameter-0-0>' against '_'
    operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:732:5: note: candidate template ignored: could not match 'basic_istream<char, type-parameter-0-0>' against '_'
    operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:774:5: note: candidate template ignored: could not match 'basic_istream<char, type-parameter-0-0>' against '_'
    operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:779:5: note: candidate template ignored: could not match 'basic_istream<char, type-parameter-0-0>' against '_'
    operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:872:5: note: candidate template ignored: could not match 'basic_istream<type-parameter-0-0, type-parameter-0-1>' against '_'
    operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/istream.tcc:923:5: note: candidate template ignored: could not match 'basic_istream<type-parameter-0-0, type-parameter-0-1>' against '_'
    operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/istream.tcc:955:5: note: candidate template ignored: could not match 'basic_istream<type-parameter-0-0, type-parameter-0-1>' against '_'
    operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
    ^
1 error generated.
